# mlops_demo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
experiment/eda/: descriptive_analysis.ipynb
experiment/ingest/: read_data.py
fixtures/: cassette.pkl
src/python_ci_template/: __init__.py  console.py
src/python_ci_template/tests/: fake_data.py  test_console.py
src/some_project/: __init__.py
tests/: fake_data.py  test_console.py
