[tool.poetry]
name = "python_ci_template"
version = "0.1.0"
description = "template to create python package including generic CI tools"
authors = ["dolfno <dnoordman@schubergphilis.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
awswrangler = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
